--- a/speakers.html
+++ b/speakers.html
@@ -51,7 +51,7 @@
   <div class="container-fluid p-0">
     <!-- logo -->
     <a class="navbar-brand" href="index.html">
-      <img src="images/logo.png" alt="logo">
+      <img src="images/logos/ICAST-LOGO.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,14 +60,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item dropdown active">
-          <a class="nav-link" href="#!" data-toggle="dropdown">Home <i class="fa fa-angle-down"></i>
+          <a class="nav-link" href="index.html" data-toggle="dropdown">Home
             <span>/</span>
           </a>
-          <!-- Dropdown list -->
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="index.html">Homepage</a></li>
-            <li><a class="dropdown-item" href="homepage-two.html">Homepage 2</a></li>
-          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="speakers.html">Speakers
@@ -127,10 +122,6 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
-      <a href="contact.html" class="ticket">
-        <img src="images/icon/ticket.png" alt="ticket">
-        <span>Buy Ticket</span>
-      </a>
     </div>
   </div>
 </nav>
